k8s-120/roles/kubernetes-extra/files/yamls/network-service/nginx-pod-v1.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-pod-v1
spec:
  containers:
  - name: nginx
    image: nginx:1.7.9
    ports:
    - containerPort: 80
