k8s-120/roles/kubernetes-extra/files/yamls/network-service/service-nginx-svr1.yaml
kind: Service
apiVersion: v1
metadata:
  name: nginx-svr1
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 80
  selector:
    app: nginx-svr1
