k8s-120/roles/kubernetes-extra/files/yamls/network-service/service-nginx-v1-nodeport.yaml
kind: Service
apiVersion: v1
metadata:
  name: nginx-pod-nodeport
spec:
  type: NodePort
  ports:
    - nodePort: 30001
      port: 80
  selector:
    app: nginx
