k8s-120/roles/kubernetes-extra/files/yamls/network-service/service-nginx-v1.yaml
kind: Service
apiVersion: v1
metadata:
  name: nginx-pod
spec:
  type: ClusterIP
  ports:
    - port: 80
  selector:
    app: nginx
